--- a/news_app/pubspec.yaml
+++ b/news_app/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_auth: ^4.15.3
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
+  http: ^1.1.0
+  intl: ^0.18.1
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
