--- a/news_app/pubspec.yaml
+++ b/news_app/pubspec.yaml
@@ -33,16 +33,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
-  google_fonts: ^6.2.1
+  google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   http: ^1.1.0
   intl: ^0.18.1
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
   url_launcher: ^6.2.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
